# algorithm_solve

./: .gitignore  2021.06.16 음양더하기.py  2021.06.16(2).py  2021.06.16.py  2021.06.17(2).py  2021.06.17.py  2021.06.18.py  2021.06.22(2).py  2021.06.24.py  2021.06.29.js  2021.07.01.py  CMakeLists.txt  README.md
boj/: 1065_한수.py  Z.py  sha256.py  나이순정렬.py  블랙잭.py  소트인사이드.py  수정렬하기3.py  수찾기.py  스택수열.py  음계.py  친구네트워크.py  키로거.py  프린트큐.py  피보나치수열.py
boj/문자열/: 그룹단어체커_1316.py  다이얼_5622.py  단어공부_1157.py  단어의개수_1152.py  문자열반복_2675.py  상수_2908.py  숫자의합_11720.py  알파벳찾기_10809.py  크로아티아알파벳_2941.py  한수_1065.py
boj/입출력과사칙연산-c++/: 10718.cpp  2557.cpp  A+B_1000.cpp  개_10172.cpp  고양이_10171.cpp
c++/: CMakeLists.txt  accumulate.cpp  array.cpp  array_and_pointer.cpp  array_rotate.cpp  call_by_reference.cpp  casting.cpp  combination.cpp  combination2.cpp  deque.cpp  float.cpp  getline.cpp  input.cpp  lower_bound_upper_bound.cpp  lower_bound_upper_bound_2.cpp  lower_bound_upper_bound_3.cpp  map.cpp  map2.cpp  max_element.cpp  memcpy.cpp  multi-demension-array.cpp  multiset.cpp  number_theory.cpp  pair.cpp  pair2.cpp  pair_sort.cpp  pair_sort2.cpp  permutation.cpp  permutation2.cpp  pointer.cpp  pointer2.cpp  printf.cpp  priority-queue.cpp  priority_queue2.cpp  queue.cpp  radix.cpp  rotate.cpp  rotate_muti_dimension_array.cpp  set.cpp  sort.cpp  (+9 more)
java_algorithm_solve/01. String/01. 문자 찾기/: 문자찾기.java
java_algorithm_solve/01. String/02. 대소문자 변환/: 대소문자 변환.java
java_algorithm_solve/01. String/05. 특정 문자 뒤집기/: README.md
java_algorithm_solve/01. String/06. 중복문자제거/: README.md  중복문자제거.java
java_algorithm_solve/01. String/07. 회문 문자열/: 회문 문자열.java
java_algorithm_solve/01. String/08. 유효한 팰린드롬/: README.md
java_algorithm_solve/01. String/09. 숫자만 추출/: README.md  숫자만 추출.java
java_algorithm_solve/01. String/10. 가장 짧은 문자거리/: README.md
java_algorithm_solve/1. String/1. 문자 찾기/: 문자찾기.java
java_algorithm_solve/1. String/10. 가장 짧은 문자거리/: 가장 짧은 문자거리.java
java_algorithm_solve/1. String/2. 대소문자 변환/: README.md  대소문자 변환.java
java_algorithm_solve/1. String/3. 문장 속 단어/: 문장 속 단어.java
java_algorithm_solve/1. String/4. 단어 뒤집기/: README.md  단어 뒤집기.java
java_algorithm_solve/1. String/5. 특정 문자 뒤집기/: 특정 문자 뒤집기.java
java_algorithm_solve/1. String/6. 중복문자제거/: 중복문자제거.java
java_algorithm_solve/1. String/7. 회문 문자열/: README.md  회문 문자열.java
java_algorithm_solve/1. String/8. 유효한 팰린드롬/: 유효한 팰린드롬.java
java_algorithm_solve/1. String/9. 숫자만 추출/: 숫자만 추출.java
java_algorithm_solve/string/1. 문자 찾기/: README.md
java_algorithm_solve/string/3. 문장 속 단어/: README.md  문장 속 단어.java
leetcode/: 2021.06.17(2).py  2021.06.18(2).py  2021.06.22(2).py  2021.06.22.py  2021.06.24(2).py  2021.06.25.py  2021.06.29.py  2021.06.30.py  2021.07.01.js  2021.07.02.js  2021.07.02.py
백준/Bronze/1000. A＋B/: A＋B.cc  A＋B.java  A＋B.py  README.md
백준/Bronze/1001. A－B/: A－B.cc  A－B.java  A－B.py  README.md
백준/Bronze/1008. A／B/: A／B.cc  A／B.java  A／B.py  README.md
백준/Bronze/10093. 숫자/: README.md  숫자.cc  숫자.java  숫자.py
백준/Bronze/10102. 개표/: README.md  개표.cc  개표.py
백준/Bronze/10162. 전자레인지/: 전자레인지.py
백준/Bronze/10171. 고양이/: README.md  고양이.cc  고양이.java  고양이.py
백준/Bronze/10172. 개/: README.md  개.cc
백준/Bronze/10205. 헤라클레스와 히드라/: README.md  헤라클레스와 히드라.py
백준/Bronze/10250. ACM 호텔/: ACM 호텔.cc
백준/Bronze/10430. 나머지/: README.md  나머지.cc  나머지.java  나머지.py
백준/Bronze/10699. 오늘 날짜/: README.md  오늘 날짜.py
백준/Bronze/10718. We love kriii/: README.md  We love kriii.cc
백준/Bronze/10757. 큰 수 A＋B/: 큰 수 A＋B.cc
백준/Bronze/10804. 카드 역배치/: README.md  카드 역배치.cc  카드 역배치.java  카드 역배치.py
백준/Bronze/10807. 개수 세기/: README.md  개수 세기.cc  개수 세기.java  개수 세기.py
백준/Bronze/10808. 알파벳 개수/: README.md  알파벳 개수.cc  알파벳 개수.java  알파벳 개수.py
백준/Bronze/10809. 알파벳 찾기/: README.md  알파벳 찾기.cc  알파벳 찾기.py
백준/Bronze/10817. 세 수/: 세 수.cc
백준/Bronze/10818. 최소， 최대/: README.md  최소， 최대.cc  최소， 최대.py
백준/Bronze/10820. 문자열 분석/: README.md  문자열 분석.cc  문자열 분석.py
백준/Bronze/10821. 정수의 개수/: 정수의 개수.py
백준/Bronze/10822. 더하기/: 더하기.py
백준/Bronze/10824. 네 수/: README.md  네 수.cc
백준/Bronze/1085. 직사각형에서 탈출/: 직사각형에서 탈출.cc
백준/Bronze/10869. 사칙연산/: README.md  사칙연산.cc  사칙연산.java  사칙연산.py
백준/Bronze/10870. 피보나치 수 5/: 피보나치 수 5.cc
백준/Bronze/10871. X보다 작은 수/: README.md  X보다 작은 수.cc  X보다 작은 수.java  X보다 작은 수.py
백준/Bronze/10872. 팩토리얼/: README.md  팩토리얼.cc
백준/Bronze/10926. ？？！/: ？？！.cc  ？？！.java  ？？！.py
백준/Bronze/10950. A＋B － 3/: A＋B － 3.cc  A＋B － 3.py  README.md
백준/Bronze/10951. A＋B － 4/: A＋B － 4.cc  README.md
백준/Bronze/10952. A＋B － 5/: A＋B － 5.cc  README.md
백준/Bronze/10953. A＋B － 6/: A＋B － 6.cc  README.md
백준/Bronze/10987. 모음의 개수/: 모음의 개수.cc
백준/Bronze/10988. 팰린드롬인지 확인하기/: README.md  팰린드롬인지 확인하기.cc  팰린드롬인지 확인하기.py
백준/Bronze/10989. 수 정렬하기 3/: README.md  수 정렬하기 3.cc  수 정렬하기 3.py
백준/Bronze/10998. A×B/: A×B.cc  A×B.java  A×B.py  README.md
백준/Bronze/1100. 하얀 칸/: 하얀 칸.py
백준/Bronze/11005. 진법 변환 2/: README.md  진법 변환 2.cc
백준/Bronze/11021. A＋B － 7/: A＋B － 7.cc  A＋B － 7.py  README.md
백준/Bronze/11022. A＋B － 8/: A＋B － 8.cc  A＋B － 8.py  README.md
백준/Bronze/11098. 첼시를 도와줘！/: README.md  첼시를 도와줘！.py
백준/Bronze/1110. 더하기 사이클/: 더하기 사이클.cc
백준/Bronze/11283. 한글 2/: 한글 2.py
백준/Bronze/11328. Strfry/: README.md  Strfry.cc  Strfry.py
백준/Bronze/11365. ！밀비 급일/: ！밀비 급일.cc
백준/Bronze/11367. Report Card Time/: README.md  Report Card Time.py
백준/Bronze/11382. 꼬마 정민/: 꼬마 정민.py
백준/Bronze/1152. 단어의 개수/: 단어의 개수.cc  단어의 개수.py
백준/Bronze/1157. 단어 공부/: 단어 공부.cc
백준/Bronze/11586. 지영 공주님의 마법 거울/: README.md  지영 공주님의 마법 거울.py
백준/Bronze/1159. 농구 경기/: README.md  농구 경기.cc  농구 경기.py
백준/Bronze/11653. 소인수분해/: README.md  소인수분해.cc  소인수분해.java  소인수분해.py
백준/Bronze/11654. 아스키 코드/: 아스키 코드.cc
백준/Bronze/11655. ROT13/: README.md  ROT13.cc
백준/Bronze/11718. 그대로 출력하기/: 그대로 출력하기.cc
백준/Bronze/11719. 그대로 출력하기 2/: 그대로 출력하기 2.cc
백준/Bronze/11720. 숫자의 합/: 숫자의 합.cc  숫자의 합.py
백준/Bronze/11721. 열 개씩 끊어 출력하기/: 열 개씩 끊어 출력하기.cc
백준/Bronze/11816. 8진수， 10진수， 16진수/: 8진수， 10진수， 16진수.py  README.md
백준/Bronze/1193. 분수찾기/: 분수찾기.cc
백준/Bronze/11944. NN/: NN.py  README.md
백준/Bronze/11945. 뜨거운 붕어빵/: 뜨거운 붕어빵.cc
(+838 files in other folders)
