cmake_minimum_required(VERSION 3.21)

project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled c++/start.cpp c++/type.cpp c++/input.cpp c++/getline.cpp c++/float.cpp c++/printf.cpp c++/casting.cpp c++/string.cpp c++/split.cpp c++/pair.cpp c++/pair2.cpp c++/tuple.cpp c++/tuple2.cpp c++/sort.cpp c++/pair_sort.cpp c++/pair_sort2.cpp c++/vector.cpp c++/vector2.cpp c++/array.cpp c++/memcpy.cpp c++/multi-demension-array.cpp c++/map.cpp c++/map2.cpp c++/set.cpp c++/multiset.cpp c++/queue.cpp c++/deque.cpp c++/struct.cpp c++/priority-queue.cpp c++/priority_queue2.cpp c++/pointer.cpp)

add_executable(start c++/start.cpp)
add_executable(type c++/type.cpp)
add_executable(input c++/input.cpp)
add_executable(getline c++/getline.cpp)
add_executable(float c++/float.cpp)
add_executable(printf c++/printf.cpp)
add_executable(casting c++/casting.cpp)
add_executable(string c++/string.cpp)
add_executable(split c++/split.cpp)
add_executable(pair c++/pair.cpp)
add_executable(pair2 c++/pair2.cpp)
add_executable(tuple c++/tuple.cpp)
add_executable(tuple2 c++/tuple2.cpp)
add_executable(sort c++/sort.cpp)
add_executable(pair_sort c++/pair_sort.cpp)
add_executable(pair_sort2 c++/pair_sort2.cpp)
add_executable(vector c++/vector.cpp)
add_executable(vector2 c++/vector2.cpp)
add_executable(array c++/array.cpp)
add_executable(memcpy c++/memcpy.cpp)
add_executable(multi-demension-array c++/multi-demension-array.cpp)
add_executable(map c++/map.cpp)
add_executable(map2 c++/map2.cpp)
add_executable(set c++/set.cpp)
add_executable(multiset c++/multiset.cpp)
add_executable(queue c++/queue.cpp)
add_executable(deque c++/deque.cpp)
add_executable(struct c++/struct.cpp)
add_executable(priority-queue c++/priority-queue.cpp)
add_executable(priority_queue2 c++/priority_queue2.cpp)
add_executable(pointer c++/pointer.cpp)